[package]
name = "sjcl"
description = "Library which supports decrypting data that was encrypted using SJCL"
version = "0.0.2"
authors = ["Teraku <teraku@teraku.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Milchdealer/sjcl-rust"
repository = "https://github.com/Milchdealer/sjcl-rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.59"
pbkdf2 = { version = "0.7.4", features = ["simple"] }
password-hash = "0.1.2"
ccm = "0.3.0"
aes = "0.6.0"
snafu = "0.6.10"
base64 = "0.13.0"
